--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <meta name="twitter:creator" content="@vikashmj9004"/>
    <head>
 <style>
+.website-counter{
+	bottom:10px;
+    position:absolute;
+}
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
 body {
   background-color: #eaeaea;
@@ -290,10 +294,30 @@ h1 {
   <span></span>
 </div>
 <h1>Redirecting</h1>
+<div class="website-counter"></div>
+<script>
+    var counterContainer = document.querySelector(".website-counter");
+var resetButton = document.querySelector("#reset");
+var visitCount = localStorage.getItem("page_view");
 
-   
+// Check if page_view entry is present
+if (visitCount) {
+  visitCount = Number(visitCount) + 1;
+  localStorage.setItem("page_view", visitCount);
+} else {
+  visitCount = 1;
+  localStorage.setItem("page_view", 1);
+}
+counterContainer.innerHTML = visitCount;
 
+// Adding onClick event listener
+resetButton.addEventListener("click", () => {
+  visitCount = 1;
+  localStorage.setItem("page_view", 1);
+  counterContainer.innerHTML = visitCount;
+});
+
+</script>
 </body>
+
 </html>
-
-
