--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ body{
 	font-weight: bold;
 	letter-spacing: 1px;
 }
-/* .clr{
+ .clr{
 	clear:both;
-} */
+} 
 .hbline{
     border: .5px solid #609EED;
     margin-top: 90px;
@@ -114,13 +114,77 @@ body{
 }
 header{
 	position: relative;
+	height: 370px;
+}
+/* ----Section ---- */
+section{
+	height: 300px;
+	padding-top: 30px;
+    padding-left: 180px;
+}
+.mypass{
+	width:560px;
+}
+.trust{
+	width: 560px;
+}
+.pass{
+	margin-top:40px;
+}
+p{
+	margin: 10px 0px 10px 0px;
+	font-weight: Bold;
+	line-height: 24.2px;
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+}
+.phead{
+	font-weight: 600;
+	font-size: 20px;
+}
+/* ----Footer ---- */
+footer{
+	padding-top: 30px;
+    padding-left: 180px;
+	position: relative;
+}
+.socialimg{
+	display:inline-block;
+}
+.url{
+   margin-top: 7px;
+   position: absolute;
+   margin-left: 8px;
+}
+ul li{
+	list-style-type:none;
+    display:inline-block;
+}
+li{
+	width:220px;
+}
+.footerheading{
+	padding-top: 10px;
+	font-size: 20px;
+	margin-bottom: 40px;
+	font-weight: 600;
+	font-size: 20px;
+}
+.btftline{
+	width: 31px;
+    position: absolute;
+    height: 1px;
+    border-top: 2px solid black;
+    top: 71px;
 }
 </style>
 </head>
 <body>
-<header>
 	<div class="bgblurblue"></div>
 	<div class="bgblurpink"></div>
+<header>
+
 	<div class="rgt">
     	<div class="name">Hello, I'm <span class="namehlt">VIKASH MJ</span></div>
         <div class="des" style ="--var-weight:900"> PRODUCT DESIGNER</div>
@@ -189,6 +253,42 @@ header{
 	<div class="clr"></div>
 	<div class="hbline"></div>
 </header>
-
+<div class="clr"></div>
+<section>
+	<div class="mypass pass">
+		<p class="phead">MY PASSION</p>
+		<p>Love to evolve ideas and bring life to it. Always want to explore new ideas with innovation, creativity and futuristic approach to the current system.
+		</p>
+	</div>
+	<div class="trust pass">
+		<p class="phead">WHAT I TRUST</p>
+		<p>Good ideas, better designs and best implementation can change the way anything works.</p>
+	</div>
+</section>
+<footer>
+	<div class="footerheading">CONTACT US</div>
+	<div class="connecting us">
+	<span class="btftline"></span>
+		<ul>
+			<li>
+				<img src="li.png" alt="Trulli" width="30" class="socialimg"/>
+				<span class="url">vikashmj9004/</span>
+			</li>
+				
+			<li>
+				<img src="dr.png" alt="Trulli" width="30"class="socialimg"/>
+				<span class="url">vikashmj9004/</span>
+			</li>
+			<li>
+				<img src="tw.png" alt="Trulli" width="30"class="socialimg"/>
+				<span class="url" style="margin-top: auto;" >vikashmj9004/</span>
+			</li>
+			<li>
+				<img src="in.png" alt="Trulli" width="30"class="socialimg"/>
+				<span class="url">vikash_mj_/</span>
+			</li>
+		</ul>
+	</div>
+</footer>
 
 </body>
