--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@ li{
     border-top: 2px solid black;
     top: 71px;
 }
+.url:hover{
+	color:#645DEC;
+	cursor:pointer;s
+}
 </style>
 </head>
 <body>
@@ -272,20 +276,20 @@ li{
 		<ul>
 			<li>
 				<img src="li.png" alt="Trulli" width="30" class="socialimg"/>
-				<span class="url">vikashmj9004/</span>
+				<a target="_blank" href="https://www.linkedin.com/in/vikashmj9004/"><span class="url">vikashmj9004/</span></a>
 			</li>
 				
 			<li>
 				<img src="dr.png" alt="Trulli" width="30"class="socialimg"/>
-				<span class="url">vikashmj9004/</span>
+				<a target="_blank" href="https://dribbble.com/vikashmj9004"><span class="url">vikashmj9004/</span></a>
 			</li>
 			<li>
 				<img src="tw.png" alt="Trulli" width="30"class="socialimg"/>
-				<span class="url" style="margin-top: auto;" >vikashmj9004/</span>
+				<a target="_blank" href="https://twitter.com/vikashmj9004"><span class="url" style="margin-top: auto;" >vikashmj9004/</span></a>
 			</li>
 			<li>
 				<img src="in.png" alt="Trulli" width="30"class="socialimg"/>
-				<span class="url">vikash_mj_/</span>
+				<a target="_blank" href="https://www.instagram.com/vikash_mj_/"><span class="url">vikash_mj_/</span></a>
 			</li>
 		</ul>
 	</div>
